--- a/.github/workflows/arm-linux-gnueabihf.yaml
+++ b/.github/workflows/arm-linux-gnueabihf.yaml
@@ -58,7 +58,7 @@ jobs:
         if: steps.cache-toolchain.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          wget https://releases.linaro.org/components/toolchain/binaries/5.5-2017.10/arm-linux-gnueabihf/gcc-linaro-5.5.0-2017.10-x86_64_arm-linux-gnueabihf.tar.xz
+          wget "https://publishing-ie-linaro-org.s3.amazonaws.com/releases/components/toolchain/binaries/5.5-2017.10/arm-linux-gnueabihf/gcc-linaro-5.5.0-2017.10-x86_64_arm-linux-gnueabihf.tar.xz?Signature=es1B1BTLoDhcP9hsP6fA40ZHR0s%3D&Expires=1713512895&AWSAccessKeyId=AKIAIELXV2RYNAHFUP7A"
           ls -lh arm-linux-gcc
 
           mkdir $GITHUB_WORKSPACE/toolchain
