--- a/.github/workflows/arm-linux-gnueabihf.yaml
+++ b/.github/workflows/arm-linux-gnueabihf.yaml
@@ -3,7 +3,14 @@ name: arm-linux-gnueabihf
 on:
   push:
     branches:
-      - fix-ios2
+      - fix-ios
+    paths:
+      - '.github/workflows/arm-linux-gnueabihf.yaml'
+  # pull_request:
+  #   branches:
+  #     - master
+  #   paths:
+  #     - '.github/workflows/arm-linux-gnueabihf.yaml'
   workflow_dispatch:
     inputs:
       version:
