--- a/.github/workflows/linux-shared.yaml
+++ b/.github/workflows/linux-shared.yaml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        arch: [x86_64, arm]
+        arch: ['x86_64', 'arm']
         config: ['Debug', 'MinSizeRel', 'Release', 'RelWithDebInfo']
 
 
