--- a/.github/workflows/linux-shared.yaml
+++ b/.github/workflows/linux-shared.yaml
@@ -3,7 +3,7 @@ name: linux-shared
 on:
   push:
     branches:
-      - fix-ios
+      - fix-arm-mihup
   workflow_dispatch:
     inputs:
       version:
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        arch: [x86_64]
+        arch: ['x86_64', 'arm']
         config: ['Debug', 'MinSizeRel', 'Release', 'RelWithDebInfo']
 
 
