--- a/.github/workflows/linux-shared.yaml
+++ b/.github/workflows/linux-shared.yaml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        arch: ['x86_64', 'arm']
+        arch: ['arm']
         config: ['Debug', 'MinSizeRel', 'Release', 'RelWithDebInfo']
 
 
