Update linux-shared.yaml arm Release

--- a/.github/workflows/linux-shared.yaml
+++ b/.github/workflows/linux-shared.yaml
@@ -27,7 +27,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         arch: ['arm']
-        config: ['Debug', 'MinSizeRel', 'Release', 'RelWithDebInfo']
+        config: ['Release']
 
 
     steps:
