--- a/.github/workflows/arm-linux-gnueabihf.yaml
+++ b/.github/workflows/arm-linux-gnueabihf.yaml
@@ -1,16 +1,6 @@
 name: arm-linux-gnueabihf
 
 on:
-  push:
-    branches:
-      - fix-arm-mihup
-    paths:
-      - '.github/workflows/arm-linux-gnueabihf.yaml'
-  # pull_request:
-  #   branches:
-  #     - master
-  #   paths:
-  #     - '.github/workflows/arm-linux-gnueabihf.yaml'
   workflow_dispatch:
     inputs:
       version:
@@ -49,7 +39,7 @@ jobs:
         if: steps.cache-build-result.outputs.cache-hit != 'true'
         uses: actions/checkout@v2
         with:
-          repository: 'debasish-mihup/onnxruntime'
+          repository: microsoft/onnxruntime
           submodules: true
           ref: v${{ env.ONNXRUNTIME_VERSION }}
 
@@ -59,17 +49,18 @@ jobs:
         uses: actions/cache@v3
         with:
           path: toolchain
-          key: gcc-linaro-5.5.0-2017.10-x86_64_arm-linux-gnueabihf.tar.xz
+          key: gcc-arm-8.2-2018.08-x86_64-arm-linux-gnueabihf
 
       - name: Download toolchain
         if: steps.cache-toolchain.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          wget https://annotation.mihup.com/mount1/DATA/AUDIO_FILES/debasish/gcc-linaro-5.5.0-2017.10-x86_64_arm-linux-gnueabihf.tar.xz --no-check-certificate
-          mkdir $GITHUB_WORKSPACE/toolchain
-          echo "Unzipping linaro toolchain"
+          git lfs install
+          git clone https://annotation.mihup.com/mount1/DATA/AUDIO_FILES/debasish/gcc-arm-8.2-2018.08-x86_64-arm-linux-gnueabihf.tar.xz
           ls -lh
-          tar xvf ./gcc-linaro-5.5.0-2017.10-x86_64_arm-linux-gnueabihf.tar.xz --strip-components 1 -C $GITHUB_WORKSPACE/toolchain
+
+          mkdir $GITHUB_WORKSPACE/toolchain
+          tar xvf ./gcc-arm-8.2-2018.08-x86_64-arm-linux-gnueabihf.tar.xz --strip-components 1 -C $GITHUB_WORKSPACE/toolchain
 
       - name: Download protoc
         if: steps.cache-build-result.outputs.cache-hit != 'true'
@@ -97,14 +88,14 @@ jobs:
           echo "$GITHUB_WORKSPACE/bin"  >> "$GITHUB_PATH"
           ls -lh "$GITHUB_WORKSPACE/toolchain/bin"
 
-          echo "CC=arm-linux-gnueabihf-gcc" >> "$GITHUB_ENV"
-          echo "CXX=arm-linux-gnueabihf-g++" >> "$GITHUB_ENV"
+          echo "CC=arm-none-linux-gnueabihf-gcc" >> "$GITHUB_ENV"
+          echo "CXX=arm-none-linux-gnueabihf-g++" >> "$GITHUB_ENV"
 
       - name: Display toolchain info
         if: steps.cache-build-result.outputs.cache-hit != 'true'
         shell: bash
         run: |
-          arm-linux-gnueabihf-gcc --version
+          arm-none-linux-gnueabihf-gcc --version
 
       - name: Display protoc info for ${{ env.ONNXRUNTIME_VERSION }}
         if: steps.cache-build-result.outputs.cache-hit != 'true'
@@ -126,28 +117,12 @@ jobs:
           sudo apt-get install python3 git-lfs
           python3 -m pip install cmake
           cmake --version
-          python3 -m pip install flatbuffers
 
       - name: apply patch
         shell: bash
         run: |
           cd tools/ci_build
           sed -i.bak s/-fcf-protection// ./build.py
-
-          cd ../..
-
-          version=${{ env.ONNXRUNTIME_VERSION }}
-          which python
-          v=$(cat ./VERSION_NUMBER)
-          if [[ $v == "1.18.0" ]]; then
-            echo $version > ./VERSION_NUMBER
-            sed -i.bak s/1.18.0/$version/g ./onnxruntime/core/session/onnxruntime_c_api.cc
-          fi
-
-          echo "---$version---"
-          cat ./VERSION_NUMBER
-          echo "---"
-
           git diff
 
       - name: Build onnxruntime for 32-bit ARM
@@ -169,8 +144,6 @@ jobs:
             --cmake_extra_defines CMAKE_INSTALL_PREFIX=$build_dir/install/ \
             --cmake_extra_defines CMAKE_SYSTEM_NAME=Linux \
             --cmake_extra_defines CMAKE_SYSTEM_PROCESSOR=armv7l \
-            --cmake_extra_defines CMAKE_C_COMPILER_FORCED=1 \
-            --cmake_extra_defines CMAKE_CXX_COMPILER_FORCED=1 \
             --target install \
             --parallel \
             --skip_tests
@@ -215,6 +188,34 @@ jobs:
           overwrite: true
           tag: v${{ env.ONNXRUNTIME_VERSION }}
 
+
+      # https://huggingface.co/docs/hub/spaces-github-actions
+      - name: Publish to huggingface
+        if: github.repository_owner == 'csukuangfj' && steps.cache-build-result.outputs.cache-hit != 'true'
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        shell: bash
+        run: |
+          ls -lh
+          version=${{ env.ONNXRUNTIME_VERSION }}
+
+          tree ./onnxruntime-linux-arm-$version/
+
+          git config --global user.email "csukuangfj@gmail.com"
+          git config --global user.name "Fangjun Kuang"
+
+          GIT_LFS_SKIP_SMUDGE=1 git clone https://huggingface.co/csukuangfj/onnxruntime-libs huggingface
+
+          cd huggingface
+          git lfs pull
+          cp -v ../onnxruntime-linux-arm-*.zip ./
+          git status
+          git lfs track "*.zip"
+
+          git add .
+
+          git commit -m "upload onnxruntime-linux-arm-${{ env.ONNXRUNTIME_VERSION }}.zip"
+          git push https://csukuangfj:$HF_TOKEN@huggingface.co/csukuangfj/onnxruntime-libs main
 
       - name: Upload artifact
         if: steps.cache-build-result.outputs.cache-hit != 'true'
